# sir-bone-rs

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  deny.toml  dist-workspace.toml
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: build-setup.yml  ci.yml  pages.yml  release.yml
docs-site/book/: book.toml  gen_palettes.py
docs-site/book/src/: SUMMARY.md  configuration.md  demo  demo.md  getting-started.md  introduction.md  mcp.md  permissions.md  providers.md  sessions.md  tools.md  tui.md
docs-site/book/theme/: custom.css  index.hbs
docs-site/book/theme/css/: variables.css
docs-site/sirbone-web/: Cargo.toml  Trunk.ghpages.toml  Trunk.toml  index.html
docs-site/sirbone-web/src/: app.rs  main.rs  types.rs
examples/: check_endpoints.rs  ground_file.rs  grounding_bench.rs  mcp_integration.rs  mcp_spike.rs  mermaid_demo.rs  mock_tui.rs  rag_bench.rs  rag_bench_code.json  rag_bench_data.json  rag_spike.rs
logos/: banner_webp.py  boar.py  boar_webp.py  braille-animation-guide.md  braille_gif.py  gif_ascii.py  mock-tui.tape  pyproject.toml
playground/: AGENTS.md  Cargo.toml  tasks.sh
playground/fixtures/: calculator.rs
playground/src/: utils.rs
playground/tests/: integration.rs
proptest-regressions/: permissions.txt  types.txt
proptest-regressions/tools/: truncate.txt
src/: ablate.rs  checks.rs  claude_md.rs  config.rs  highlight.rs  lib.rs  main.rs  oracle.rs  permissions.rs  project_store.rs  quota.rs  rag.rs  render.rs  session.rs  skills.rs  snapshot.rs  structure.rs  system_prompt.rs  tui.rs  types.rs
src/agent/: compact.rs  grounding.rs  mod.rs  policy.rs  state.rs  tokens.rs
src/ai/: anthropic.rs  client.rs  mod.rs
src/cmd/: doctor.rs  ground.rs  login.rs  mod.rs  session_cmds.rs
src/mcp/: client.rs  mod.rs
src/tools/: architect.rs  bash.rs  code_map.rs  doc_search.rs  edit.rs  freshness.rs  glob.rs  grep.rs  historia.rs  jobs.rs  load_skill.rs  mod.rs  note.rs  read.rs  truncate.rs  undo.rs  verify.rs  web_fetch.rs  web_search.rs  write.rs
src/tui/: app.rs  boar.rs  diff.rs  draw.rs  markdown.rs  run.rs  theme.rs  widgets.rs
tests/: agent_loop.rs  anthropic_http.rs  policy_packs.rs  smoke.rs
tests/common/: mod.rs
tests/fixtures/policy-packs/: ci-headless.json  conservative-local.json  mcp-docs.json  no-network.json
